--- a/BarcodeReaderDemo.csproj
+++ b/BarcodeReaderDemo.csproj
@@ -10,10 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
+    <PackageReference Include="PDFtoImage" Version="5.1.0" />
     <PackageReference Include="SkiaSharp" Version="3.119.0" />
     <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.119.0" />
-    <PackageReference Include="Syncfusion.Pdf.Imaging.Net.Core" Version="29.2.5" />
-    <PackageReference Include="Syncfusion.PdfToImageConverter.Net" Version="29.2.5" />
     <PackageReference Include="ZXing.Net" Version="0.16.10" />
     <PackageReference Include="ZXing.Net.Bindings.SkiaSharp" Version="0.16.21" />
   </ItemGroup>
